BEM + color black

--- a/index.html
+++ b/index.html
@@ -110,12 +110,9 @@
                         decentralized
                         wireless infrastucutre.</p>
                     <div class="header__text-content-buttonsContainer">
-                        <a href="#" target="_blank"
-                            class="header__text-content-buttonsContainer-button header__text-content-buttonsContainer-button--blue">Mine</a>
-                        <a href="#" target="_blank"
-                            class="header__text-content-buttonsContainer-button header__text-content-buttonsContainer-button--purple">Stake</a>
-                        <a href="#" target="_blank"
-                            class="header__text-content-buttonsContainer-button header__text-content-buttonsContainer-button--green">Use</a>
+                        <a href="#" target="_blank" class="button button--blackFont">Mine</a>
+                        <a href="#" target="_blank" class="button button--blackFont button--blackFont--purple">Stake</a>
+                        <a href="#" target="_blank" class="button button--blackFont button--blackFont--green">Use</a>
                     </div>
                 </div>
             </div>
@@ -186,9 +183,7 @@
                     <div class="news__container-bottom-text">
                         <h2>The Network is Live</h2>
                         <p>The People's Network is the world's fastest growing wireless network ever.</p>
-                        <a href="https://explorer.helium.com/" target="_blank"
-                            class="news__container-bottom-text-btn">View Network
-                            Coverage</a>
+                        <a href="https://explorer.helium.com/" target="_blank" class="button">View Network Coverage</a>
                     </div>
                     <div class="news__container-bottom-numbers">
                         <div class="news__container-bottom-numbers-content">
@@ -216,8 +211,7 @@
                         <h3>A New Way to Mine Crypto</h3>
                         <p>By deploying a simple device in your home or office, you can provide your city with miles of
                             low-power network coverage for billions of devices and earn a new cryptocurrency, HNT.</p>
-                        <a href="https://www.helium.com/mine" class="section-mine__container-main-text-btn">Learn
-                            More</a>
+                        <a href="https://www.helium.com/mine" class="button">Learn More</a>
                     </div>
                     <div class="section-mine__container-main-img"><img src="./assets/img/miner4.png" alt="Miner"></div>
                 </div>
@@ -252,27 +246,30 @@
                 <p>Thousands of existings solutions, sensors, devices and gateways can be easily configured to run
                     LongFi - a powerful blend of LoRaWAN and blockchain technologies.</p>
                 <div class="section-use__main-buttonsContainer">
-                    <a href="https://www.helium.com/mine" class="network-btn netgreen">Use the Network</a>
-                    <a href="https://www.helium.com/mine" class="network-btn">Build with Helium Console</a>
+                    <a href="https://www.helium.com/mine" class="button button--green">Use
+                        the Network</a>
+                    <a href="https://www.helium.com/mine" class="button">Build with
+                        Helium Console</a>
                 </div>
             </div>
-            <div class="use-console">
-                <div class="use-console__container">
-                    <div class="use-console__container--second">
+
+            <div class="section-use__console">
+                <div class="section-use__console-container">
+                    <div class="section-use__console-container-box">
                         <h4>An open alternative</h4>
                         <p>The People's Network is built on Open Source technology and governed by an open alliance.</p>
                     </div>
-                    <div class="use-console__container--second">
+                    <div class="section-use__console-container-box">
                         <h4>Scalable & affordable</h4>
                         <p>Say goodbye to expensive cell contracts. On Helium a sensor can cost cents to run a year.</p>
                     </div>
-                    <div class="use-console__container--second">
+                    <div class="section-use__console-container-box">
                         <h4>Lorawan-compatible</h4>
                         <p>Utilize thousands if existing sensors, chipsets and MCUs for streamlined development.</p>
                     </div>
                 </div>
-                <div class="use-console__principal">
-                    <div class="use-console__principal--left">
+                <div class="section-use__console-bigBox">
+                    <div class="section-use__console-bigBox-textContent">
                         <h3>Get Started on Helium Console Today</h3>
                         <p>After many months of work and testing based on community feedback, the team is excited to
                             announce updates to Console! The team noy only worked on new features and capabilities, but
@@ -281,12 +278,13 @@
                         <p>Read more about Consolde and how to get started <a
                                 href="https://blog.helium.com/console-2-0-is-here-bd25a3aa5ee1">here</a>.</p>
                     </div>
-                    <div class="use-console__principal--right"></div>
+                    <div class="section-use__console-bigBox-img"></div>
                 </div>
             </div>
-            <div class="use-partnairs">
+
+            <div class="section-use__partnairs">
                 <h4>Helium is used by:</h4>
-                <div class="use-partnairs__logo">
+                <div class="section-use__partnairs-logo">
                     <img src="./assets/svg/agulus.svg" alt="Logo Agulus" />
                     <img src="./assets/svg/airly.svg" alt="Logo airly" />
                     <img src="./assets/svg/nowi.svg" alt="Logo nowi" />
@@ -301,37 +299,38 @@
             </div>
         </div>
 
+
         <div class="section-techno">
-            <div class="section-techno_container">
-                <div class="section-techno_container__header">
+            <div class="section-techno__container">
+                <div class="section-techno__container-header">
                     <h2>Core Technologies.</h2>
                     <p>The People's Network is made possible through sophisticated, open-source technologies that aim to
                         create a truly decentralized and trust-less model for building wireless infrastucture.</p>
                 </div>
-                <div class="section-techno_container__info">
-                    <div class="section-techno_container__info--content">
-                        <a href="#" target="_blank" class="section-techno_container__info--content_img">
+                <div class="section-techno__container-info">
+                    <div class="section-techno__container-info-content">
+                        <a href="#" target="_blank" class="section-techno__container-info-content-img">
                             <img src="./assets/svg/core1.svg" alt="Core">
                         </a>
-                        <a href="#" target="_blank" class="section-techno_container__info--content_text">
+                        <a href="#" target="_blank" class="section-techno__container-info-content-text">
                             <h5>Tokens & Data Credits</h5>
                             <p>The network uses two units of exchange: HNT, a new cryptocurrency, and Data Credits.</p>
                         </a>
                     </div>
-                    <div class="section-techno_container__info--content">
-                        <a href="#" target="_blank" class="section-techno_container__info--content_img">
+                    <div class="section-techno__container-info-content">
+                        <a href="#" target="_blank" class="section-techno__container-info-content-img">
                             <img src="./assets/svg/core2.svg" alt="Core">
                         </a>
-                        <a href="#" target="_blank" class="section-techno_container__info--content_text">
+                        <a href="#" target="_blank" class="section-techno__container-info-content-text">
                             <h5>Proof-of-Coverage</h5>
                             <p>Our novel proof-of-work algorithm enables Hotspots to be rewarded trustlessly.</p>
                         </a>
                     </div>
-                    <div class="section-techno_container__info--content">
-                        <a href="#" target="_blank" class="section-techno_container__info--content_img">
+                    <div class="section-techno__container-info-content">
+                        <a href="#" target="_blank" class="section-techno__container-info-content-img">
                             <img src="./assets/svg/core3.svg" alt="Core">
                         </a>
-                        <a href="#" target="_blank" class="section-techno_container__info--content_text">
+                        <a href="#" target="_blank" class="section-techno__container-info-content-text">
                             <h5>Helium LongFi</h5>
                             <p>LongFi combines the low-power, long-range LoRaWAN wireless protocol with the Helium
                                 Blockchain.</p>
@@ -344,19 +343,21 @@
         <footer>
             <div class="footer-top">
                 <div class="footer-top__container">
-                    <div class="footer-top__container--mail">
-                        <div class="footer-top__container--mail_left">
+                    <div class="footer-top__container-mail">
+                        <div class="footer-top__container-mail-title">
                             <h3>Get Ecosystem Updates to Your Inbox</h3>
                         </div>
-                        <div class="footer-top__container--mail_right">
+                        <div class="footer-top__container-mail-input">
                             <form action="#">
-                                <input type="mail" placeholder="e.g. hello@helium.com" class="text-mail" />
-                                <input type="submit" value="Join Mailing List" class="button-mail" />
+                                <input type="mail" placeholder="e.g. hello@helium.com"
+                                    class="footer-top__container-mail-input-text" />
+                                <input type="submit" value="Join Mailing List"
+                                    class="footer-top__container-mail-input-btn" />
                             </form>
                         </div>
                     </div>
-                    <div class="footer-top__container--index">
-                        <div class="footer-top__container--index_categorie">
+                    <div class="footer-top__container-index">
+                        <div class="footer-top__container-index-categorie">
                             <h5>Learn</h5>
                             <ul>
                                 <li><a href="#">Home</a></li>
@@ -369,7 +370,7 @@
                                 <li><a href="#">Whitepaper</a></li>
                             </ul>
                         </div>
-                        <div class="footer-top__container--index_categorie">
+                        <div class="footer-top__container-index-categorie">
                             <h5>Get involved</h5>
                             <ul>
                                 <li><a href="#">Mine</a></li>
@@ -381,7 +382,7 @@
                                 <li><a href="#">DEveloppers</a></li>
                             </ul>
                         </div>
-                        <div class="footer-top__container--index_categorie">
+                        <div class="footer-top__container-index-categorie">
                             <h5>Social</h5>
                             <ul>
                                 <li><a href="#">Discord</a></li>
@@ -395,7 +396,7 @@
                                 <li><a href="#">Instagram</a></li>
                             </ul>
                         </div>
-                        <div class="footer-top__container--index_categorie">
+                        <div class="footer-top__container-index-categorie">
                             <h5>Get in touch</h5>
                             <ul>
                                 <li><a href="#">hello@helium.com</a></li>
@@ -403,7 +404,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-top__container--logo">
+                    <div class="footer-top__container-logo">
                         <img src="./assets/svg/logo-horizontalwhite.svg" alt="Logo Helium" />
                     </div>
                 </div>
