Animations déclenchées au scroll JavaScript

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
         <div class="section-use">
             <div class="section-use__header">
-                <img src="./assets/img/useheader.jpg" alt="Userhead" />
+                <img src="./assets/img/useheader.jpg" alt="Userhead" class="section-use__header-img" />
                 <h2>Use.</h2>
                 <h3>Massive, Decentralized Connectivity</h3>
             </div>
