Navbar responsive menu

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <ul>
                         <li class="build__responsive">
                             Build <img src="./assets/svg/dropdownarrow.svg" alt="Fleche">
-                            <ul class="build__responsive--menu">
+                            <ul class="build__responsive--menu" id="responsive__menu">
                                 <li><a href="#">Hotspots</a></li>
                                 <li><a href="#">Stake</a></li>
                                 <li><a href="#">Token</a></li>
@@ -49,7 +49,7 @@
                         </li>
                         <li class="use__responsive">
                             Use <img src="./assets/svg/dropdownarrow.svg" alt="Fleche">
-                            <ul class="use__responsive--menu">
+                            <ul class="use__responsive--menu" id="responsive__menu">
                                 <li><a href="#">Enterprise</a></li>
                                 <li><a href="#">Roam</a></li>
                                 <li><a href="#">Solutions</a></li>
@@ -58,7 +58,7 @@
                         </li>
                         <li class="resources__responsive">
                             Resources <img src="./assets/svg/dropdownarrow.svg" alt="Fleche">
-                            <ul class="resources__responsive--menu">
+                            <ul class="resources__responsive--menu" id="responsive__menu">
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Helium Explorer</a></li>
                                 <li><a href="#">Community</a></li>
