navbar menu responsive terminé

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                                 <li><a href="#">Community</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Ecosystem</a></li>
-                        <li><a href="#">Cellular Summer</a></li>
-                        <li><a href="#">Helium: Chapter 2</a></li>
+                        <li class="title_responsive"><a href="#">Ecosystem</a></li>
+                        <li class="title_responsive"><a href="#">Cellular Summer</a></li>
+                        <li class="title_responsive"><a href="#">Helium: Chapter 2</a></li>
                     </ul>
                 </div>
             </div>
