--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                     <div class="news__container-bottom-text">
                         <h2>The Network is Live</h2>
                         <p>The People's Network is the world's fastest growing wireless network ever.</p>
-                        <a href="https://explorer.helium.com/" target="_blank" class="button">View Network Coverage</a>
+                        <a href="https://explorer.helium.com/" target="_blank" class="button button--news">View Network
+                            Coverage</a>
                     </div>
                     <div class="news__container-bottom-numbers">
                         <div class="news__container-bottom-numbers-content">
