section use responsive en cours

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         <h4>Scalable & affordable</h4>
                         <p>Say goodbye to expensive cell contracts. On Helium a sensor can cost cents to run a year.</p>
                     </div>
-                    <div class="section-use__console-container-box">
+                    <div class="section-use__console-container-box section-use__console-container-box--2">
                         <h4>Lorawan-compatible</h4>
                         <p>Utilize thousands if existing sensors, chipsets and MCUs for streamlined development.</p>
                     </div>
